--- a/backend/public/about.html
+++ b/backend/public/about.html
@@ -114,7 +114,7 @@
                     <h1 data-aos="fade-up" data-aos-duration="500" class="primary-header">
                         About <span class="primary-color">Us</span>
                     </h1>
-                    <p class="text-light fs-6 text-capitalize fw-light" data-aos="fade-up" data-aos-duration="700">We
+                    <p class="text-light fs-6 text-capitalize fw-light" data-aos="fade-up" data-aos-duration="700">
                         embrace everyone's journey, from novices launching careers to experts
                         elevating skills.</p>
                     <nav data-aos="fade-up" data-aos-duration="800"
