--- a/backend/public/contact.html
+++ b/backend/public/contact.html
@@ -45,7 +45,6 @@
         border-radius: var(--bs-border-radius);
         transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     } */
-   
 </style>
 
 <body>
@@ -140,8 +139,9 @@
                     <h1 data-aos="fade-up" data-aos-duration="500" class="primary-header">
                         Contact <span class="primary-color">Us</span>
                     </h1>
-                    <p class="text-light fs-6 text-capitalize fw-light" data-aos="fade-up" data-aos-duration="700">Take
-                        control of your journey – we'll power up your robust online presence today.</p>
+                    <p class="text-light fs-6 text-capitalize fw-light" data-aos="fade-up" data-aos-duration="700">Thank
+                        you for your interest in getting in touch with us. We value your feedback, questions, and
+                        suggestions.</p>
                     <nav data-aos="fade-up" data-aos-duration="800"
                         style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);"
                         aria-label="breadcrumb">
@@ -193,14 +193,16 @@
                 <div class="col-md-7 mt-3" data-aos="zoom-in" data-aos-duration="700">
                     <div id="map" class="h-100">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.3804037012246!2d80.13504807467314!3d12.947492915407189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525f64a235f2ef%3A0x299b582eb0851d17!2sAxess%20Technology!5e0!3m2!1sen!2sin!4v1699969414526!5m2!1sen!2sin"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.7227190712797!2d80.2460233746738!3d12.989578514484684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d48aabc65c1%3A0x6f54da323bd9c8d0!2sATIT!5e0!3m2!1sen!2sin!4v1701325976498!5m2!1sen!2sin"
                             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade" class="h-100"></iframe>
+
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
 
     <div class="container company-logos mb-5 overflow-hidden">
         <p class="text-center text-capitalize  justify-content-center mt-4 display-6 linear-gradient-text fw-semibold"
