--- a/backend/public/courses/Software Development/mern.html
+++ b/backend/public/courses/Software Development/mern.html
@@ -24,7 +24,7 @@
                 <h1 data-aos="fade-up" data-aos-duration="500" class="primary-header">
                     MERN  <span class="primary-color">Stack</span>
                 </h1>
-                <p class="text-light fs-6 text-capitalize fw-light" data-aos="fade-right" data-aos-duration="700">We
+                <p class="text-light fs-6 text-capitalize fw-light" data-aos="fade-right" data-aos-duration="700">
                     Average salary for Mernstack engineers in India - Rs.12 Lakhs Per Annum</p>
                     <nav  data-aos="fade-up" data-aos-duration="800"  style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);"
                     aria-label="breadcrumb">
