--- a/backend/public/about.html
+++ b/backend/public/about.html
@@ -144,8 +144,8 @@
                                     </i>
                                 </div>
                                 <h3>Dedications</h3>
-                                <p>We are dedicated to helping you achieve your goals and reach your highest potential
-                                    needs to launching careers to experts elevating skills.</p>
+                                <p>We are dedicated to helping you achieve your goals and reach your highest potential.
+                                   </p>
                             </div>
                         </div>
                         <div class="atit-card-1  col-md-3" data-aos="fade-up" data-aos-duration="700">
@@ -247,7 +247,7 @@
                                     <div class="icon">
                                         <i class="ri-computer-line"></i>
                                     </div>
-                                    <p class="head" data-aos="fade-up" data-aos-duration="600">3. Works</p>
+                                    <p class="head" data-aos="fade-up" data-aos-duration="600">3. Work</p>
                                     <p data-aos="fade-up" data-aos-duration="700">
                                         Step into a world of opportunities with a guaranteed job offer upon completing
                                         our comprehensive
